--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div class="container">
-    <h1 class="title">Antoine Dubé</h1>
+    <h1 class="title">Antoine&nbsp;Dubé</h1>
     <div class="icon left">
       <a href="https://github.com/antoinedube">
         <i class="fa fa-2x fa-github-square"></i>
