--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,25 @@
-<!doctype html>
-<head>
-  <title>Antoine Dubé</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Antoine Dubé</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  </head>
 
-<body>
-  <div class="container">
-    <h1 class="title">Antoine&nbsp;Dubé</h1>
-    <div class="icon left">
-      <a href="https://github.com/antoinedube">
-        <i class="fa fa-2x fa-github-square"></i>
-      </a>
+  <body>
+    <div class="container">
+      <h1 class="title">Antoine&nbsp;Dubé</h1>
+      <div class="icon left">
+        <a href="https://github.com/antoinedube">
+          <i class="fa fa-2x fa-github-square"></i>
+        </a>
+      </div>
+      <div class="icon right">
+        <a href="https://www.linkedin.com/in/antoinedube">
+          <i class="fa fa-2x fa-linkedin-square"></i>
+        </a>
+      </div>
     </div>
-    <div class="icon right">
-      <a href="https://www.linkedin.com/in/antoinedube">
-        <i class="fa fa-2x fa-linkedin-square"></i>
-      </a>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
