--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,5 +1,5 @@
 html {
-    min-height: 100%;
+    height: 100%;
     background-repeat:no-repeat;
     background: linear-gradient(to top, #ECF0F1, #F2F1EF);
 }
@@ -7,6 +7,19 @@ html {
 body {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     color: #6C7A89;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    z-index: -5;
 }
 
 .container {
