--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Antoine Dubé</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  </head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Antoine Dubé</title>
+        <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+        <link rel="stylesheet" type="text/css"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <body>
-    <div class="container">
-      <h1 class="title">Antoine&nbsp;Dubé</h1>
-      <div class="icon left">
-        <a href="https://github.com/antoinedube">
-          <i class="fa fa-2x fa-github-square"></i>
-        </a>
-      </div>
-      <div class="icon right">
-        <a href="https://www.linkedin.com/in/antoinedube">
-          <i class="fa fa-2x fa-linkedin-square"></i>
-        </a>
-      </div>
-    </div>
-  </body>
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/lodash/lodash.min.js"></script>
+        <script src="node_modules/d3/build/d3.min.js"></script>
+        <script src="scripts/page-background.js"></script>
+    </head>
+
+    <body>
+        <div class="container">
+            <h1 class="title">Antoine&nbsp;Dubé</h1>
+            <div class="icon left">
+                <a href="https://github.com/antoinedube">
+                    <i class="fa fa-2x fa-github-square"></i>
+                </a>
+            </div>
+            <div class="icon right">
+                <a href="https://www.linkedin.com/in/antoinedube">
+                    <i class="fa fa-2x fa-linkedin-square"></i>
+                </a>
+            </div>
+        </div>
+    </body>
 </html>
