--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-    width: 315px;
+    width: 40%;
     height: 500px;
     position: absolute;
     top: 0;
@@ -40,16 +40,14 @@ body {
 }
 
 .icon {
-    width: 153px;
-    display: inline-block;
+    width: 100%;
+    display: block;
+    font-size: 1.5em;
+    margin: 2em;
 }
 
-.left {
-    text-align: left;
-}
-
-.right {
-    text-align: right;
+.url-path {
+  display: inline-block;
 }
 
 a:link, a:visited, a:active {
